--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <p><a href="3.html"><button>Challenge #3: Sich durch ein KI-Modell herausfordern lassen</button></a></p>
 <p><a href="4.html"><button>Challenge #4: Mit einem KI-Modell kreativ sein</button></a></p>
 <p><a href="5.html"><button>Challenge #5: KI-Inhalte rechtlich sicher weiternutzen</button></a></p>
-<p><a href="6.html"><button>Challenge #6: Proaktive Transparenz bei der KI-Nutzung angehen</button></a></p>
-<p><a href="7.html"><button>Challenge #7: Avatar-Videos erstellen</button></a></p>
+<p><a href="6.html"><button>Challenge #6: Mit KI interaktive Übungen generieren</button></a></p>
+<p><a href="7.html"><button>Challenge #7: Mit KI Material für Austausch generieren</button></a></p>
 <p><a href="8.html"><button>Challenge #8: Vielfältige KI-Tools erkunden</button></a></p>
 <p><a href="9.html"><button>Challenge #9: Vernetztes Lesen lernen</button></a></p>
 <p><a href="10.html"><button>Challenge #10: Kontext-Prompting üben</button></a></p>
@@ -27,9 +27,13 @@
 <p><a href="12.html"><button>Challenge #12: Dank KI das Rad nicht neu erfinden</button></a></p>
 <p><a href="13.html"><button>Challenge #13: Ein CustomGPT gestalten</button></a></p>
 <p><a href="14.html"><button>Challenge #14: KI als Lerntutor nutzen</button></a></p>
-<p><a href="15.html"><button>Challenge #15: Live-Einsatz von KI in Meetings ausprobieren</button></a></p>
+<p><a href="15.html"><button>Challenge #15: Live-Einsatz von KI in Seminaren ausprobieren</button></a></p>
 <p><a href="16.html"><button>Challenge #16: Eine eigene Herausforderung definieren</button></a></p>
 <p>Viel Freude und Erfolg beim gemeinsamen Erkunden! 🙂</p>
+        <p>PS. Bonus-Angebote: 
+        <ul><li>Proaktive Transparenz bei der KI-Nutzung angehen</li>
+        <li>Avatar-Videos und Bilder erstellen</li></ul></p>
+        
 </main>
  <footer class="container">
       <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de.de">eBildungslabor</a> •
