--- a/7.html
+++ b/7.html
@@ -12,67 +12,104 @@
 
 <main class="container">
 
-<h1>Challenge #7: Avatar-Videos erstellen</h1>
+<h1>Challenge #7: Mit KI Material für Austausch generieren</h1>
 
 <article id="article">
-    👉 Es gibt zunehmend Online-Kurse und Präsentationen, in denen nicht mehr reale Personen auftreten, sondern ihre KI-generierten Avatare. In dieser Challenge könnt ihr euch entweder praktisch mit einem KI-Tool ausprobieren oder euch ein Beispiel anschauen und darüber reflektieren.
+    👉 KI kann helfen, Material für Diskussionen und interaktive Reflexionen zu erstellen. In dieser Challenge nutzt du KI, um Inhalte für zwei bewährte Austauschmethoden zu generieren: Kartenaustausch und Mindmap-Generierung.
 </article>
 
 <details>
     <summary>Hintergrund</summary>
-    <p>KI-gestützte Avatar-Videos ermöglichen es, eine künstlich generierte Person als Sprecherin oder Sprecher für ein Video zu nutzen. Dabei wird ein hochgeladenes reales Video als Basis verwendet, auf dessen Grundlage die KI Lippenbewegungen, Mimik und Sprache für neue Inhalte anpasst. Das gleiche Prinzip kann auch genutzt werden um KI-Avatare als Foto zu generieren</p>
-    <p>Die Technologie basiert auf der Verarbeitung von Video- oder Fotodaten, um ein möglichst realistisches digitales Abbild der Person zu erstellen. Allerdings gibt es offene Fragen zu Qualität, Einsatzmöglichkeiten und ethischen Aspekten.</p>
+    <p>
+        Austausch und Reflexion sind zentrale Bestandteile eines aktiven Lernprozesses. Doch oft fehlt es an geeigneten Materialien, um Diskussionen zu strukturieren oder Lernende in den Austausch zu bringen. Hier kann KI helfen, indem sie gezielt Diskussionsimpulse oder strukturierte Begriffe liefert. 
+    </p>
+    <p>
+        Zwei Methoden, die sich besonders gut für den Austausch eignen, sind der Kartenaustausch und die Mindmap-Generierung. Beide Methoden setzen darauf, dass Lernende aktiv mit Inhalten arbeiten, eigene Gedanken entwickeln und Perspektiven austauschen. In dieser Challenge wirst du KI nutzen, um Material für beide Methoden zu erstellen.
+    </p>
 </details>
 
 <details>
-    <summary>Benötigte Materialien</summary>
-    <p>Ich habe sowohl mit KI-Bildern als auch mit KI-Videos von mir experimentiert. Nutzt meine Reflexionen dazu für Euer Weiterdenken!</p>
-    
-    <ul>
-        <li><a href="https://ebildungslabor.de/now/ki-selbstexperiment-eine-kuenstliche-nele-%f0%9f%99%82/">Reflexion zu KI-Bildern</a></li>
-              <li><a href="https://ebildungslabor.de/now/ki-experiment-avatar-video/">Reflexion zu KI-Videos</a></li>
- 
-    </ul>
-<p>Wenn ihr auch praktisch ausprobieren wollt, müsst ihr euch bei den entsprechenden Tools registrieren. Zum Teil ist die Entwicklung mit Kosten verbunden.</p>
+    <summary>Benötigtes Material</summary>
+    <p>
+        <ul>
+            <li>Einen Zugang zu einem Sprachmodell</li>
+            <li>Ein Thema, zu dem du Material für Austausch erstellen möchtest</li>
+        </ul>
+    </p>
 </details>
 
 <h2>Anleitung</h2>
-<p>Wählt eine der beiden Optionen:</p>
 
 <ol>
-    <li><strong>Praxis-Test:</strong>
+    <li><strong>Wähle ein Thema:</strong>  
+        <p>Überlege dir ein Thema, zu dem du Material für den Austausch generieren möchtest.</p>
+    </li>
+
+    <li><strong>Kartenaustausch vorbereiten</strong>
+        <p>Der Kartenaustausch ist eine Methode, bei der Lernende Karten mit Impulsen oder Fragen tauschen und diskutieren. Jede Person bekommt eine Karte, sucht sich eine*n Partner*in, stellt die eigene Karte vor, hört sich die andere Karte an und tauscht dann die Karten. Danach geht es mit einer neuen Person weiter.</p>
+        <p><strong>So nutzt du KI für den Kartenaustausch:</strong></p>
         <ul>
-            <li>Probiert selbst ein Avatar-Video-Tool wie HeyGen oder eines der vielfältigen KI-Selfie-Tools aus.</li>
-            <li>Reflektiert gemeinsam, wie ihr das Ergebnis einschätzt.</li>
+            <li>Bitte ein KI-Sprachmodell, zu deinem Thema 10-15 kontroverse Thesen oder offene Fragen zu generieren.</li>
+            <li>Falls gewünscht, kannst du die generierten Thesen überarbeiten oder umformulieren.</li>
+            <li>Schreibe die Thesen oder Fragen auf Karten (digital oder auf Papier).</li>
+        </ul>
+        <p><strong>Beispiel:</strong> Wenn dein Thema "Zukunft der Arbeit" ist, könnte KI folgende Thesen vorschlagen:</p>
+        <ul>
+            <li>"Homeoffice wird langfristig die klassische Büroarbeit ersetzen."</li>
+            <li>"KI wird mehr Jobs schaffen, als sie vernichtet."</li>
+            <li>"Menschen sollten für KI-generierte Arbeit entlohnt werden."</li>
+            <li>...</li>
+        </ul>
+        <p>Die Aufgabe der Lernenden ist es, sich zu den Thesen auszutauschen und Argumente dafür oder dagegen zu finden.</p>
+    </li>
+
+    <li><strong>Mindmap-Generierung vorbereiten</strong>
+        <p>Bei einer Mindmap geht es darum, Begriffe oder Konzepte visuell zu strukturieren und in Beziehung zu setzen. Lernende sortieren Begriffe, ergänzen eigene Ideen und erklären Verknüpfungen.</p>
+        <p><strong>So nutzt du KI für die Mindmap:</strong></p>
+        <ul>
+            <li>Bitte KI, eine Liste von 15-20 zentralen Begriffen zu deinem Thema zu erstellen.</li>
+            <li>Falls nötig, ergänze oder sortiere die Begriffe manuell.</li>
+            <li>Gib die Begriffe an die Lernenden und lasse sie in Kleingruppen eine Mindmap damit gestalten.</li>
+        </ul>
+        <p><strong>Beispiel:</strong> Bei dem Thema "Nachhaltigkeit" könnte KI folgende Begriffe vorschlagen:</p>
+        <ul>
+            <li>Erneuerbare Energien</li>
+            <li>CO₂-Fußabdruck</li>
+            <li>Zero Waste</li>
+            <li>Kreislaufwirtschaft</li>
+            <li>Soziale Gerechtigkeit</li>
+            <li>...</li>li>
+        </ul>
+        <p>Die Lernenden können die Begriffe auf einem Plakat oder in einem Online-Whiteboard in Beziehung setzen und eigene Ergänzungen machen. Dabei kommen sie untereinander zu dem Thema ins Gespräch und sortieren es für sich.</p>
+    </li>
+
+    <li><strong>Erweiterung: Eigene Methoden entwickeln</strong>
+        <p>Diskutiert in der Gruppe: Welche weiteren Methoden könnte man mit KI-Unterstützung vorbereiten?</p>
+        <ul>
+            <li>Gibt es andere Austauschformate, für die KI hilfreiche Materialien generieren könnte?</li>
+            <li>Welche Methoden nutzt ihr bereits, die sich mit KI optimieren lassen?</li>
         </ul>
     </li>
-<p>Achtung: Ihr stimmt mit dem Ausprobieren zu, dass die Firmen Euch bzw. Eure Bilder/ Videos als Trainingsmaterial nutzen dürfen!</p>
-    <li><strong>Reflexion anhand eines Beispiels:</strong>
-        <ul>
-            <li>Schaut euch meine unter Materialien verlinkte Beispiele an.</li>
-            <li>Diskutiert: Wie wirkt es auf euch? Welche Fragen oder Bedenken habt ihr?</li>
+
+    <li><strong>Reflexion:</strong>
+        <p>Überlegt abschließend:Hat die KI bei der Materialerstellung geholfen? Wenn ja, inwiefern?</li>
+            
         </ul>
     </li>
 </ol>
 
-<h2>Reflexion</h2>
-<ul>
-    <li>Welche Potenziale und Herausforderungen seht ihr in der Nutzung von KI-Avataren?</li>
-    <li>In welchen Kontexten könnte eine solche Technologie sinnvoll oder problematisch sein?</li>
-    <li>Würdet ihr selbst KI-Avatare in der Praxis einsetzen? Warum (nicht)?</li>
-</ul>
-
-<p>Fertig! Damit habt ihr diese Challenge erfolgreich bearbeitet, könnt sie abhaken und euch die nächste Herausforderung - gerne in einer neuen Gruppe - suchen. </p>
-
+<p>Fertig! Damit habt ihr diese Challenge erfolgreich bearbeitet, könnt sie abhaken und euch die nächste Herausforderung – gerne in einer neuen Gruppe – suchen.</p>
 
 <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
 
 </main>
 
 <footer class="container">
-    <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de.de">eBildungslabor</a> •
+    <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de">eBildungslabor</a> •
     Lizenz: <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de">CC0 1.0</a></small>
 </footer>
 
 </body>
 </html>
+
+
