--- a/14.html
+++ b/14.html
@@ -15,7 +15,7 @@
 <h1>Challenge #14: KI als Lerntutor nutzen</h1>
 
 <article id="article">
- 👉 KI-Modelle können als Lerntutoren genutzt werden. Mit ihrer Hilfe können wir uns neue Themen erschließen oder bereits bekannte Themen vertiefen. Auch zum gezielten Üben sind KI-Modelle gut geeignet.
+ 👉 KI-Modelle können als Lerntutoren genutzt werden. Mit ihrer Hilfe können wir uns neue Themen erschließen oder bereits bekannte Themen vertiefen. Auch zum gezielten Üben sind KI-Modelle gut geeignet. Als Dozent*in kannst du auf diese Weise selbst zu einem Thema lernen und/ oder Lernende befähigen, für sich selbst zu selbstgewählten Themen zu lernen. 
 </article>
 
 <details>
