--- a/15.html
+++ b/15.html
@@ -12,32 +12,32 @@
 
 <main class="container">
 
-<h1>Challenge #15: KI im Live-Einsatz in Meetings</h1>
+<h1>Challenge #15: KI im Live-Einsatz in Seminaren</h1>
 
 <article id="article">
-    👉 In dieser Challenge experimentiert ihr mit dem Live-Einsatz von KI in Meetings. Dabei nutzt ihr den erweiterten Audio-Modus von ChatGPT, um zu testen, wie KI dabei unterstützen kann, Diskussionen zu strukturieren, Zusammenfassungen zu liefern oder gezielt Fragen zu stellen.
+    👉 In dieser Challenge experimentiert ihr mit dem Live-Einsatz von KI in Seminaren. Dabei nutzt ihr KI-gestützte Tools, um zu testen, wie KI dabei helfen kann, Diskussionen zu strukturieren, Zusammenfassungen zu liefern oder gezielt Reflexionsfragen zu stellen.
 </article>
 
 <details>
     <summary>Hintergrund</summary>
-    <p>Künstliche Intelligenz kann nicht nur im Nachhinein Inhalte zusammenfassen oder analysieren, sondern auch in Echtzeit als unterstützende Instanz in Gesprächen agieren. Eine Möglichkeit ist der erweiterte Audio-Modus von ChatGPT, bei dem das KI-Modell zuhören und nur auf direkte Ansprache reagieren kann.</p>
+    <p>Künstliche Intelligenz kann nicht nur Inhalte nachträglich zusammenfassen oder analysieren, sondern auch während eines Seminars als unterstützende Instanz agieren. KI kann genutzt werden, um Diskussionen zu strukturieren, Lerninhalte zusammenzufassen oder gezielt Impulse zur Reflexion zu geben.</p>
 
-    <p>Potenzielle Einsatzmöglichkeiten:
+    <p>Mögliche Einsatzbereiche in Seminaren:
         <ul>
-            <li>Zusammenfassungen: KI kann regelmäßig kurze Zusammenfassungen eines Gesprächs liefern.</li>
-            <li>Fragen zur Reflexion: Die KI kann gezielt Fragen stellen, um die Diskussion zu vertiefen oder alternative Perspektiven aufzuzeigen.</li>
-            <li>Systematisierung: Die KI kann helfen, Gedanken zu strukturieren und offene Punkte festzuhalten.</li>
+            <li><strong>Zusammenfassungen:</strong> KI kann regelmäßig eine kurze Zusammenfassung der bisherigen Diskussion oder Präsentation liefern.</li>
+            <li><strong>Fragen zur Reflexion:</strong> Die KI kann gezielt Fragen stellen, um die Auseinandersetzung mit dem Thema zu vertiefen.</li>
+            <li><strong>Systematisierung:</strong> Die KI kann zentrale Begriffe oder offene Fragen aus der Diskussion strukturieren.</li>
         </ul>
     </p>
 
-    <p>Diese Funktionen könnten Meetings effizienter gestalten, werfen aber auch Fragen zur Sinnhaftigkeit, Akzeptanz und möglichen Herausforderungen auf.</p>
+    <p>Diese Funktionen können helfen, Seminare interaktiver und strukturierter zu gestalten, werfen aber auch Fragen zur Sinnhaftigkeit, Akzeptanz und möglichen Herausforderungen auf.</p>
 </details>
 
 <details>
     <summary>Benötigtes Material</summary>
     <ul>
-        <li>Ein Smartphone mit Zugang zum Audio-Modus von ChatGPT</li>
-        <li>Ein Thema für eine kurze Diskussion (z. B. „Was ist KI?“)</li>
+        <li>Ein Gerät mit Zugang zu einem KI-Tool (z. B. ChatGPT, Notion AI, Otter.ai für Transkription)</li>
+        <li>Ein Thema oder eine laufende Seminar-Diskussion</li>
     </ul>
 </details>
 
@@ -46,20 +46,21 @@
 <ol>
     <li><strong>Vorbereitung:</strong>
         <ul>
-            <li>Startet auf einem Smartphone den Audio-Modus von ChatGPT (falls verfügbar).</li>
-            <li>Platziert das Smartphone in der Mitte des Tisches.</li>
-            <li>Gebt eine kurze Einweisung: Die KI soll nur sprechen, wenn sie angesprochen wird.</li>
+            <li>Wählt ein KI-Tool, das in Echtzeit Inhalte verarbeiten kann.</li>
+            <li>Klärt die Gruppe über den KI-Einsatz auf und stellt sicher, dass alle mit der Nutzung einverstanden sind.</li>
+            <li>Definiert eine klare Fragestellung oder ein Diskussionsthema für das Seminar.</li>
         </ul>
     </li>
 
     <li><strong>Experiment:</strong>
         <ul>
-            <li>Beginnt eine Diskussion zu einem beliebigen Thema (z. B. „Was ist KI?“ oder eine aktuelle Fragestellung aus eurem Kontext).</li>
+            <li>Startet eine Diskussion oder einen inhaltlichen Seminarblock zu einem Thema.</li>
             <li>Testet, wie die KI die Diskussion unterstützen kann:
                 <ul>
-                    <li>Fragt ChatGPT nach einer Zusammenfassung des bisher Gesagten.</li>
-                    <li>Fordert ChatGPT auf, eine Reflexionsfrage zu stellen.</li>
-                    <li>Lasst ChatGPT offene Punkte sammeln oder eine abschließende Synthese formulieren.</li>
+                    <li>Fragt die KI nach einer Zusammenfassung der bisherigen Diskussion.</li>
+                    <li>Lasst euch von der KI eine Reflexionsfrage zu eurem Thema generieren.</li>
+                    <li>Fordert die KI auf, zentrale Begriffe zu extrahieren und eine visuelle Mindmap daraus zu erstellen.</li>
+                    <li>Versucht, KI-generierte Impulse oder Thesen in die Diskussion einfließen zu lassen.</li>
                 </ul>
             </li>
         </ul>
@@ -67,21 +68,21 @@
 
     <li><strong>Reflexion:</strong>
         <ul>
-            <li>Wie hat sich die Nutzung von KI auf die Diskussion ausgewirkt?</li>
+            <li>Wie hat sich die Nutzung von KI auf die Seminardiskussion ausgewirkt?</li>
             <li>Welche Vorteile und Herausforderungen seht ihr?</li>
-            <li>Wäre ein KI-gestütztes Meeting-Tool für eure Arbeit hilfreich? Warum (nicht)?</li>
+            <li>Wie könnte KI in zukünftigen Seminaren sinnvoll eingesetzt werden?</li>
         </ul>
     </li>
 </ol>
 
-<p>Fertig! Damit habt ihr diese Challenge erfolgreich bearbeitet, könnt sie abhaken und euch die nächste Herausforderung - gerne in einer neuen Gruppe - suchen. </p>
+<p>Fertig! Damit habt ihr diese Challenge erfolgreich bearbeitet, könnt sie abhaken und euch die nächste Herausforderung - gerne in einer neuen Gruppe - suchen.</p>
 
 <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
 
 </main>
 
 <footer class="container">
-    <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de.de">eBildungslabor</a> •
+    <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de">eBildungslabor</a> •
     Lizenz: <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de">CC0 1.0</a></small>
 </footer>
 
