--- a/6.html
+++ b/6.html
@@ -47,7 +47,7 @@
         <ul>
             <li>Lasse dir Quizfragen zu einem Thema generieren.</li>
             <li>Entwickle einen Lückentext zu einem Thema mithilfe eines KI-Modells</li>
-            <li>Teile das Transkript eines Videos mit einem KI-Modell und lasse dazu einen Mutltiple Choice Text generieren.
+            <li>Teile das Transkript eines Videos mit einem KI-Modell und lasse dazu einen Multiple Choice Text generieren.
                 <li>Lasse Texte in unterschiedliche Schwierigkeitsstufen 'übersetzen' oder passe Geschichten / Übungen / Texte auf die spezifischen Interesse deiner Zielgruppe an. 
         </ul>
         <p>Das Grundmuster ist hier immer: Thema gut beschreiben oder genutztes Lehrmaterial mit dem KI-Modell teilen, Art der Ausgabe festlegen und generieren lassen</p>
