--- a/7.html
+++ b/7.html
@@ -49,7 +49,7 @@
         <p>Der Kartenaustausch ist eine Methode, bei der Lernende Karten mit Impulsen oder Fragen tauschen und diskutieren. Jede Person bekommt eine Karte, sucht sich eine*n Partner*in, stellt die eigene Karte vor, hört sich die andere Karte an und tauscht dann die Karten. Danach geht es mit einer neuen Person weiter.</p>
         <p><strong>So nutzt du KI für den Kartenaustausch:</strong></p>
         <ul>
-            <li>Bitte ein KI-Sprachmodell, zu deinem Thema 10-15 kontroverse Thesen oder offene Fragen zu generieren.</li>
+            <li>Bitte ein KI-Sprachmodell, zu deinem Thema 10-15 kontroverse Thesen oder offene Fragen zu generieren. Du kannst auch Materialien vorgeben, auf die sich das KI-Modell beziehen soll.</li>
             <li>Falls gewünscht, kannst du die generierten Thesen überarbeiten oder umformulieren.</li>
             <li>Schreibe die Thesen oder Fragen auf Karten (digital oder auf Papier).</li>
         </ul>
@@ -63,11 +63,11 @@
         <p>Die Aufgabe der Lernenden ist es, sich zu den Thesen auszutauschen und Argumente dafür oder dagegen zu finden.</p>
     </li>
 
-    <li><strong>Mindmap-Generierung vorbereiten</strong>
-        <p>Bei einer Mindmap geht es darum, Begriffe oder Konzepte visuell zu strukturieren und in Beziehung zu setzen. Lernende sortieren Begriffe, ergänzen eigene Ideen und erklären Verknüpfungen.</p>
+    <li><strong>Vorgegebene Mindmap-Generierung vorbereiten</strong>
+        <p>Bei einer vorgegebenen Mindmap geht es darum, wichtige Begriffe oder Konzepte eines behandelten Themas zur Rekapitulation visuell zu strukturieren und in Beziehung zu setzen. Lernende erhalten Begriffe, sortieren sie, ergänzen eigene Ideen und erklären Verknüpfungen.</p>
         <p><strong>So nutzt du KI für die Mindmap:</strong></p>
         <ul>
-            <li>Bitte KI, eine Liste von 15-20 zentralen Begriffen zu deinem Thema zu erstellen.</li>
+            <li>Bitte KI, eine Liste von 15-20 zentralen Begriffen zu deinem Thema zu erstellen. Du kannst auch ein Material vorgeben.</li>
             <li>Falls nötig, ergänze oder sortiere die Begriffe manuell.</li>
             <li>Gib die Begriffe an die Lernenden und lasse sie in Kleingruppen eine Mindmap damit gestalten.</li>
         </ul>
@@ -78,7 +78,7 @@
             <li>Zero Waste</li>
             <li>Kreislaufwirtschaft</li>
             <li>Soziale Gerechtigkeit</li>
-            <li>...</li>li>
+            <li>...</li>
         </ul>
         <p>Die Lernenden können die Begriffe auf einem Plakat oder in einem Online-Whiteboard in Beziehung setzen und eigene Ergänzungen machen. Dabei kommen sie untereinander zu dem Thema ins Gespräch und sortieren es für sich.</p>
     </li>
