--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <p><a href="16.html"><button>Challenge #16: Eine eigene Herausforderung definieren</button></a></p>
 <p>Viel Freude und Erfolg beim gemeinsamen Erkunden! 🙂</p>
         <p>PS. Bonus-Angebote: 
-        <ul><li>Proaktive Transparenz bei der KI-Nutzung angehen</li>
-        <li>Avatar-Videos und Bilder erstellen</li></ul></p>
+        <ul><li><a href="bonus1.html">Proaktive Transparenz bei der KI-Nutzung angehen</a></li>
+        <li><a href="bonus2.html">Avatar-Videos und Bilder erstellen</li></ul></p>
         
 </main>
  <footer class="container">
