--- a/15.html
+++ b/15.html
@@ -36,7 +36,7 @@
 <details>
     <summary>Benötigtes Material</summary>
     <ul>
-        <li>Ein Gerät mit Zugang zu einem KI-Tool (z. B. ChatGPT, Notion AI, Otter.ai für Transkription)</li>
+        <li>Ein Gerät mit Zugang zu einem KI-Tool mit Audio-Modus (z. B. ChatGPT)</li>
         <li>Ein Thema oder eine laufende Seminar-Diskussion</li>
     </ul>
 </details>
@@ -46,7 +46,7 @@
 <ol>
     <li><strong>Vorbereitung:</strong>
         <ul>
-            <li>Wählt ein KI-Tool, das in Echtzeit Inhalte verarbeiten kann.</li>
+            <li>Wählt ein KI-Tool mit Audio-Modus.</li>
             <li>Klärt die Gruppe über den KI-Einsatz auf und stellt sicher, dass alle mit der Nutzung einverstanden sind.</li>
             <li>Definiert eine klare Fragestellung oder ein Diskussionsthema für das Seminar.</li>
         </ul>
@@ -54,12 +54,12 @@
 
     <li><strong>Experiment:</strong>
         <ul>
-            <li>Startet eine Diskussion oder einen inhaltlichen Seminarblock zu einem Thema.</li>
-            <li>Testet, wie die KI die Diskussion unterstützen kann:
+            <li>Startet eine Diskussion oder einen inhaltlichen Seminarblock zu einem Thema und schaltet zuvor den Audio-Modus des KI-Tools an. Erklärt der KI den Rahmen und legt fest, dass sie sich nur zu Wort melden soll, wenn ihr sie direkt anspricht.</li>
+            <li>Startet eure Diskussion und testet an geeigneter Stelle, wie die KI die Diskussion unterstützen kann:
                 <ul>
                     <li>Fragt die KI nach einer Zusammenfassung der bisherigen Diskussion.</li>
                     <li>Lasst euch von der KI eine Reflexionsfrage zu eurem Thema generieren.</li>
-                    <li>Fordert die KI auf, zentrale Begriffe zu extrahieren und eine visuelle Mindmap daraus zu erstellen.</li>
+            
                     <li>Versucht, KI-generierte Impulse oder Thesen in die Diskussion einfließen zu lassen.</li>
                 </ul>
             </li>
