--- a/14.html
+++ b/14.html
@@ -38,7 +38,7 @@
 <h2>Anleitung</h2>
 <p>Hier ist eine exemplarische Anleitung. Du kannst sie für deinen Kontext anpassen.</p>
 <ol>
-  <li>Stelle der KI Materialien zur Verfügung, die für dein Lernen relevant sind. Wenn du auf nichts verweisen willst, nutzt das KI-Modell 'nur' die eigene Datenbasis.</li>
+  <li>Stelle der KI Materialien zur Verfügung, die für dein Lernen oder das Lernen der Teilnehmenden relevant sind. Wenn du auf nichts verweisen willst, nutzt das KI-Modell 'nur' die eigene Datenbasis.</li>
     <li>Fordere die KI auf, als Lerntutor zu agieren und schlage vor, wie der Bot agieren soll: dir Schritt für Schritt etwas erklären, Nachfragen an dich stellen und dich bei Bedarf korrigieren, dir zunächst einen allgemeinen Überblick verschaffen ...</li>
     <li>Du kannst auch festlegen, welche Art 'Lehrer' dein KI-Chatbot sein soll.</li>
     <li>Du kannst auch mit diesen Ideen experimentieren:
