--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <p>Viel Freude und Erfolg beim gemeinsamen Erkunden! 🙂</p>
         <p>PS. Bonus-Angebote: 
         <ul><li><a href="bonus1.html">Proaktive Transparenz bei der KI-Nutzung angehen</a></li>
-        <li><a href="bonus2.html">Avatar-Videos und Bilder erstellen</li></ul></p>
+        <li><a href="bonus2.html">Avatar-Videos und Bilder erstellen</a></li></ul></p>
         
 </main>
  <footer class="container">
-      <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de.de">eBildungslabor</a> •
+      <small>Konzipiert und erstellt von Nele aus dem <a href="https://ebildungslabor.de">eBildungslabor</a> •
         Lizenz: <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de"
           >CC0 1.0</a
         ></small>
